kubernetes/apps/networking/teleport/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: teleport
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: teleport
    egress:
      - toPorts:
          - ports:
              - port: "9000"
                protocol: TCP
              - port: "9001"
                protocol: TCP
        toCIDRSet:
          - cidr: "<path:kubernetes/data/internal/base#CIDR_TRUSTED>"
# yamllint enable rule:line-length
